[package]
name = "sqlite_clone"
version = "0.1.0"
authors = ["Jeff Hughes <jeff.hughes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
regex = "1.4.5"
lazy_static = "1.4.0"
positioned-io = "0.2.2"
tempfile = "3.2.0"